<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideNode3a">

    <RelativeLayout
        android:id="@+id/guide_node_3a_relative_layout"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"

        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/touchInterceptor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/guide_node_3a_tv"
            style="@style/GuideNodeTitleStyle"
            android:textColor="@color/colorPrimary"
            android:text="@string/enter_form_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/dfName1_til_gn3a"
            android:layout_width="@dimen/edit_text_width"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/guide_node_3a_tv"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/dfName1_et_gn3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:autofillHints="@string/Defendant1Name"
                android:inputType="textCapWords"
                android:ems="10"
                android:hint="@string/Defendant1Name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dfName2_til_gn3a"
            android:layout_width="@dimen/edit_text_width"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/dfName1_til_gn3a"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/dfName2_et_gn3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:inputType="textCapWords"
                android:autofillHints="@string/Defendant2Name"
                android:ems="10"
                android:hint="@string/Defendant2Name" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/appealDate_til_gn3a"
            android:layout_width="@dimen/edit_text_width"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/dfName2_til_gn3a"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/appealDate_et_gn3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:inputType="date"
                android:autofillHints="@string/AppealDate"
                android:ems="10"
                android:hint="@string/AppealDate" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/courtCost_til_gn3a"
            android:layout_width="@dimen/edit_text_width"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/appealDate_til_gn3a"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/courtCost_et_gn3a"
                android:inputType="numberDecimal"
                android:autofillHints="@string/CourtCostsPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/CourtCostsPaid" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTo_til_gn3a"
            android:layout_width="@dimen/edit_text_width"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/courtCost_til_gn3a"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/emailTo_et_gn3a"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/emailAddress" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/prev_button_gn3a"
            style="@style/PrevButtonStyle"
            android:onClick="pressBackButton"
            android:text="@string/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/next_button_gn3a"
            style="@style/NextButtonStyle"
            android:background="@drawable/submit_button_background"
            android:onClick="pressSubmit"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>